@@ -1,9 +1,14 @@
 
 
+                CHANGES IN party VERSION 1.3-3 (2019-03-04)
+
+    o    make rchk happier
+
                 CHANGES IN party VERSION 1.3-2 (2019-03-01)
 
     o    move ExpectCovar and ExpectCovarInfluence classes from coin to
          party
+
 
                 CHANGES IN party VERSION 1.3-1 (2018-08-08)
 
